# rascaline-torch

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
rascaline_torch/: __init__.py  autograd.cpp  calculator.py  lammps.py  rascaline_torch.hpp  register.cpp  system.cpp  system.py  torch.cpp  torch.py
rascaline_torch/src/: autograd.cpp  descriptor.cpp  interner.cpp  rascaline_torch.hpp  register.cpp  system.cpp
src/rascaline_torch/: __init__.py  calculator.py  data.py  system.py
src/rascaline_torch/cxx/: autograd.cpp  equistore_torch.cpp  equistore_torch.hpp  rascaline_torch.hpp  register.cpp  system.cpp
tests/: autograd.py  calculator.py  errors.py  finite_diff.py  module.py
