[build-system]
requires = [
    "setuptools >=61",
    "wheel >=0.38",
    "torch >=1.11",
    "cmake",
    "rascaline@git+https://github.com/Luthaf/rascaline",
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]

[testenv]
skip_install = True
deps =
    discover
    ase
    torch >=1.11

commands =
    python setup.py --quiet install
    discover -p "*.py" -s tests
"""
