[metadata]
name = rascaline_torch
; long_description =
; long_description_content_type = text/markdown

; license_files =
; author =
; author_email =
; description =
; keywords =
; url =
; classifiers =

[options]
zip_safe = False
packages = find:
install_requires =
    torch
    rascaline @ https://github.com/Luthaf/rascaline/archive/7c889b7ebb469ea91f424d81aed9bed80532c6f8.zip
