[metadata]
name = rascaline_torch
; long_description =
; long_description_content_type = text/markdown

; license_files =
; author =
; author_email =
; description =
; keywords =
; url =
; classifiers =

[options]
install_requires =
    torch >=1.11
    rascaline @ https://github.com/Luthaf/rascaline/archive/7fba66b.zip

zip_safe = False
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
