[metadata]
name = rascaline_torch
; long_description =
; long_description_content_type = text/markdown

; license_files =
; author =
; author_email =
; description =
; keywords =
; url =
; classifiers =

[options]
install_requires =
    torch >=1.11
    rascaline @ git+https://github.com/lab-cosmo/rascaline.git@alchemy-paper

zip_safe = False
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
